adjust media query for tablets, fix #metal cart alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -102,11 +102,12 @@ label{
 
 #metals{
     font-size: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
-#metals h1{
-    margin-top: 50%;
-}
 .card{
     margin-top: 40px;
     background-color: rgb(207, 206, 203);
@@ -126,7 +127,7 @@ label{
 
 
 .numbers input{
-    width: 200px;
+    width: 100%;
     height: 30px;
     border-radius: 15px;
     border: 1px solid gray;
@@ -138,7 +139,7 @@ label{
 }
 
 .results input{
-    width: 250px;
+    width: 100%;
     height: 35px;
 
 }
@@ -171,7 +172,13 @@ label{
         width: 30px;
         height: 30px;
     }
+}
 
+@media only screen and (max-width: 1050px) and (min-width: 601px){
+    
+    .card{
+        width: 40%;
+    }
 }
 
 /* BUTTON SECTION */
